--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -41,18 +41,28 @@
     }
   }
 }
-@media (max-width: 720px) {
+@media (max-width: 750px) {
   .navbar-lewagon {
+    padding-top: 0px;
+    padding-bottom: 0px;
     .button{
-      font-size: 13px;
+      font-size: 8px;
 
     }
     .input{
-      font-size: 30px;
-      width: 160px;
+      font-size: 8px;
+      width: 100px;
     }
     .image{
-      width: 30px;
+      width: 40px;
+    }
+    .navbar-brand {
+      img {
+      width: 35px !important;
+      }
+    }
+    .font-big{
+      font-size: 30px;
     }
   }
 }
@@ -75,6 +85,9 @@
       img {
       width: 35px !important;
       }
+    }
+    .font-big{
+      font-size: 30px;
     }
   }
 }
