--- a/app/assets/stylesheets/components/_range.scss
+++ b/app/assets/stylesheets/components/_range.scss
@@ -18,6 +18,7 @@
   border-radius: 5rem;
   justify-content: center;
   color: black;
+  font-size: 15px;
 }
 
 
@@ -124,3 +125,4 @@ input[type="range"] {
     background: #59929e;
   }
 }
+
