--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,7 +24,7 @@
           <%= link_to "Entrar", new_user_session_path, class: "btn btn-outline-primary align-middle h-75 ml-2 button" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Cadastre-se", new_user_session_path, class: "btn btn-outline-primary align-middle h-75 ml-2 button" %>
+          <%= link_to "Cadastre-se", new_user_registration_path, class: "btn btn-outline-primary align-middle h-75 ml-2 button" %>
         </li>
       <% end %>
     </ul>
